--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <p>i am</p>
-    <script>
+    <!-- <script>
     addEventListener("load", function () {
         createChatWidget({
           chatbotId: "your-chatbot-id",
@@ -28,6 +28,6 @@
           qna: {},
         });
       });
-    </script>
+    </script> -->
   </body>
 </html>
